--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,16 @@
-flask
-flask-cors
+Flask
+Flask-Cors
+Flask-SQLAlchemy
+Flask-Migrate
+mysql-connector-python
 pandas
-openai
-os
+numpy
+scikit-learn
+transformers
+torch
+plotly
+matplotlib
+seaborn
+wordcloud
+textblob
+requests
